--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@nuxtjs/cloudinary": "^1.0.3",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vue-swatches": "^2.1.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.0",
